--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.4",
+    "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.3.0"
+    "react-redux": "^7.2.1",
+    "react-scripts": "^3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
